--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="app_name">CursorChanger</string>
+    <string name="title_activity_main">CursorChanger</string>
 
 </resources>
